--- a/index.html
+++ b/index.html
@@ -1,12 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" href="styles.css">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <script src="script.js" defer></script>
 </head>
 <body>
-  
+  <div class="page">
+    <header>
+      <h1>Simple Four-Function Calculator</h1>
+    </header>
+    <div class="container">
+      <div class="display">
+        <h1></h1>
+      </div>
+      <button class="clear">A/C</button>
+    </div>
+  </div>
 </body>
 </html>
